--- a/Javascript/javascript string methods.html
+++ b/Javascript/javascript string methods.html
@@ -85,6 +85,17 @@
             
             </div>
         </div>
+        <div class="bg-[#E7E9EB] p-4 space-y-3 shadow-md rounded-lg h-[450px]">
+            <h3 class="my-2.5 text-2xl font-normal">Template Literals:</h3>
+            <div class="border-l-4 border-[#04AA6D] bg-white px-3 py-8 overflow-auto h-4/5">            
+                <p>Template literals are enclosed by backtick(`) characters instead of double or single quotes, allowing for the following:</p>
+                <ol class="list-decimal pl-8">
+                    <li>Multi-line strings</li>
+                    <li>string interpolation</li>
+                </ol>
+            </div>
+        </div>
+
     
     </div>
    
