Some text added

--- a/Javascript/javascript dom.html
+++ b/Javascript/javascript dom.html
@@ -1,5 +1,5 @@
 <div class=" px-5">
-    <h3 class="text-5xl text-[#9522E1] font-normal m-2.5 capitalize">Javascript Function </h3>
+    <h3 class="text-5xl text-[#9522E1] font-normal m-2.5 capitalize">Javascript DOM</h3>
 <div>
     <div class=" grid grid-cols-1  xl:grid-cols-2 2xl:grid-cols-3 mx-auto my-5 items-stretch gap-5 justify-center ">
         
